--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 						<img class="img-proj" src="images/covid-tracker.jpg"/>
 						<div class="overlay">
 							<h5 class="title">COVID TRACKER</h5>
-							<a href="https://covid-19-trackerist.herokuapp.com/" target="_blank" class="btn btn-visit"
+							<a href="https://covid-19-trackerist.herokuapp.com" target="_blank" class="btn btn-visit"
 								>Visit website&nbsp;<i class="fas fa-arrow-right"></i
 							></a>
 						</div>
