--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 					<div class="col-lg-4 div-projects wow fadeInLeft">
 						<img class="img-proj" src="images/covid-tracker.jpg"/>
 						<div class="overlay">
-							<h5 class="title">COVID TRACKER</h5>
+							<h5 class="title">COVID-19 TRACKER</h5>
 							<a href="https://covid-19-trackerist.herokuapp.com/" target="_blank" class="btn btn-visit"
 								>Visit website&nbsp;<i class="fas fa-arrow-right"></i
 							></a>
