--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<span></span>
 						<div class="inner-intro">
 							<h1>Hi, I'm <e class="text-me">Vencer Olermo</e>.</h1>
-							<h1>A Fullstack Web Developer</h1>
+							<h1>I'm a Web Developer</h1>
 							<center>
 								<a href="resume.pdf" class="download-cv" style="text-decoration: none;" download>
 									<button
@@ -135,7 +135,7 @@
 							<h4>
 								I'm a <span class="skyblue">Fullstack Web Developer.</span
 								><br />
-								I am passionate developing a websites, working static and
+								I develop a websites, static and
 								dynamic user friendly Interface. <br /><span class="skyblue"
 									>Let's make something special.</span
 								>
@@ -519,17 +519,8 @@
 					<div class="col-lg-4 div-projects wow fadeInRight">
 						<img class="img-proj" src="images/farmhub.fw.png" />
 						<div class="overlay">
-							<h4 class="title">FARMHUB</h4>
-							<a href="http://venzolermo.ml/farmhub/" target="_blank" class="btn btn-visit"
-								>Visit website&nbsp;<i class="fas fa-arrow-right"></i
-							></a>
-						</div>
-					</div>
-					<div class="col-lg-4 div-projects wow fadeInRight">
-						<img class="img-proj" src="images/pukaw.jpg" />
-						<div class="overlay">
-							<h4 class="title">PUKAW</h4>
-							<a href="http://venzolermo.ml/pukaw/" target="_blank" class="btn btn-visit"
+							<h4 class="title">Mercedes Venz</h4>
+							<a href="https://mercedes-venz.herokuapp.com/" target="_blank" class="btn btn-visit"
 								>Visit website&nbsp;<i class="fas fa-arrow-right"></i
 							></a>
 						</div>
@@ -538,8 +529,8 @@
 						<img class="img-proj" src="images/kwara.jpg" />
 						<div class="overlay">
 							<h4 class="title">KWARA (UNDER DEVELOPMENT)</h4>
-							<a href="viewScreenShots.html" target="_blank" class="btn btn-visit"
-								>View Screen Shots&nbsp;<i class="fas fa-arrow-right"></i
+							<a href="https://kwara.herokuapp.com/" target="_blank" class="btn btn-visit"
+								>Visit website&nbsp;<i class="fas fa-arrow-right"></i
 							></a>
 						</div>
 					</div>
@@ -552,7 +543,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6 p-2">
-							<form action="" style="border: 2px solid rgba(139, 137, 137, 0.638); padding: 15px; border-radius: 10px;">
+							<form action="" style="padding: 15px; border-radius: 10px;">
 								<div class="form-group">
 									<input type="text" class="form-control" placeholder="Name" />
 								</div>
